# Ivoire

./: .coveragerc  .flake8  .pre-commit-config.yaml  .travis.yml  FAQ.rst  MANIFEST.in  README.rst  example.py  index.html  noxfile.py  params.json  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: ci.yml  coverage.yml  packaging.yml
examples/: calculator_spec.py  next_spec.py
ivoire/: __init__.py  __main__.py  compat.py  load.py  manager.py  result.py  run.py  standalone.py  transform.py  util.py
ivoire/spec/: run_spec.py  util.py
ivoire/spec/unit/: context_manager_spec.py  context_spec.py  describe_spec.py  example_spec.py  load_spec.py  result_spec.py  run_spec.py  transform_spec.py
ivoire/tests/: test_load.py  test_result.py  test_run.py  test_standalone.py  test_transform.py  test_util.py  util.py
