[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "ivoire"
description = "A simple RSpec-like testing framework."
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "MIT"}
keywords = []
authors = [
  {email = "Julian+Ivoire@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
ivoire = "ivoire.run:main"

[project.urls]
Homepage = "https://github.com/Julian/Ivoire"
Issues = "https://github.com/Julian/Ivoire/issues/"
Source = "https://github.com/Julian/Ivoire"

[tool.isort]
combine_as_imports = true
from_first = true
include_trailing_comma = true
multi_line_output = 3
