[metadata]
name = ivoire
url = https://github.com/Julian/Ivoire
project_urls =
    Source = https://github.com/Julian/Ivoire
    Issues = https://github.com/Julian/Ivoire/issues/
description = A simple RSpec-like testing framework.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+ivoire@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires = 
    importlib_metadata; python_version < '3.8'

[options.entry_points]
console_scripts =
    ivoire = ivoire.run:main

[flake8]
exclude = ivoire/__init__.py

[bdist_wheel]
universal = 1
